--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -46,4 +46,4 @@ jobs:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         uses: Ilshidur/action-discord@master
         with:
-          args: '{{ url }} has been upadated.'
+          args: '{{ steps.deployment.outputs.page_url }} has been upadated.'
