--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -44,6 +44,7 @@ jobs:
       - name: Discord notification
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+          PAGE_URL: ${{ steps.deployment.outputs.page_url }}
         uses: Ilshidur/action-discord@master
         with:
-          args: '{{ steps.deployment.outputs.page_url }} has been upadated.'
+          args: '{{ PAGE_URL }} has been upadated.'
